# deft

./: .gitignore  Cargo.toml  LICENSE  README.md  build-dts.sh  build.rs  build.sh  deft-black.css  deft-dark.css  deft.css  env.d.ts  index.js  lib.js  publish.sh  worker-index.js
.github/workflows/: ci.yaml
docker/deft-linux-x11/: Dockerfile
examples/: custom_element.rs  debug.rs  demo.rs  gallery.rs  hello.js  hello.rs  mobile_demo.rs  paragraph_test.rs
examples/custom-element-js/: index.js
examples/demo-js/: index.js
examples/gallery/: Cargo.toml  build.rs
examples/gallery-js/: index.js
examples/gallery/js/: index.js
examples/gallery/src/: main.rs
examples/gallery/web/: debug.html  index.html  main.js
js/: deft.d.ts  package.json
scripts/: build-android.sh  build-ohos-example-arm64.sh  build-ohos-example.bat  build-ohos-example.sh  build-wasm-example.bat  build-wasm.bat  build-wasm.sh
skia-window/: Cargo.toml  build.rs  publish.sh
skia-window/examples/: demo.rs
skia-window/src/: context.rs  gl.rs  gl_renderer.rs  gl_surface.rs  layer.rs  lib.rs  mrc.rs  paint.rs  renderer.rs  skia_window.rs  soft.rs  soft_surface.rs  softbuffer.rs  surface.rs  webgl.rs
skia-window/src/gl/: context.rs  gl_renderer.rs  gl_surface.rs  layer.rs
skia-window/src/soft/: context.rs  gl_presenter.rs  layer.rs  soft_renderer.rs  soft_surface.rs  softbuffer_surface_presenter.rs  surface_presenter.rs
skia-window/src/softbuffer/: context.rs  gl_presenter.rs  layer.rs  soft_surface.rs  softbuffer_surface_presenter.rs
src/: android.rs  animation.rs  app.rs  base.rs  border.rs  cache.rs  canvas_util.rs  computed.rs  console.rs  cursor.rs  data_dir.rs  element.rs  error.rs  event.rs  event_loop.rs  ext_clipboard.rs  ext_worker.rs  font.rs  frame.rs  frame_rate.rs  id_generator.rs  id_hash_map.rs  img_manager.rs  layout.rs  lib.rs  loader.rs  log.rs  menu.rs  mrc.rs  number.rs  paint.rs  performance.rs  platform.rs  render.rs  renderer.rs  resource.rs  resource_table.rs  state.rs  string.rs  style.rs  (+13 more)
src/animation/: actor.rs  css_actor.rs
src/console/: windows.rs
src/element/: body.rs  button.rs  checkbox.rs  common.rs  container.rs  edit_history.rs  entry.rs  font_manager.rs  image.rs  label.rs  paragraph.rs  radio.rs  richtext.rs  scroll.rs  scroll_bar.rs  select.rs  text.rs  textedit.rs  textinput.rs  util.rs
src/element/common/: editable.rs  image_object.rs  scrollable.rs  svg_object.rs
src/element/paragraph/: simple_paragraph_builder.rs  typeface_mgr.rs
src/element/text/: rasterize_cache.rs  simple_text_paragraph.rs  skia_text_paragraph.rs  text_paragraph.rs
src/event/: event_emitter.rs
src/ext/: audio_player.rs  common.rs  ext_animation.rs  ext_appfs.rs  ext_audio.rs  ext_base64.rs  ext_clipboard.rs  ext_console.rs  ext_dialog.rs  ext_env.rs  ext_fetch.rs  ext_frame.rs  ext_fs.rs  ext_http.rs  ext_localstorage.rs  ext_path.rs  ext_process.rs  ext_shell.rs  ext_sqlite.rs  ext_timer.rs  ext_tray.rs  ext_websocket.rs  ext_window.rs  ext_worker.rs  mod.rs  promise.rs  service.rs
src/font/: family.rs
src/js/: js_binding.rs  js_deserialze.rs  js_engine.rs  js_event_loop.rs  js_runtime.rs  js_serde.rs  js_value_util.rs  mod.rs
src/loader/: http_loader.rs
src/macro_mod/: element.rs  js_type.rs  mod.rs  performance.rs  style.rs
src/platform/: android.rs  emscripten.rs  ios.rs  linux.rs  macos.rs  ohos.rs  windows.rs
src/render/: cssborder.rs  layout_tree.rs  paint_layer.rs  paint_node.rs  paint_object.rs  paint_tree.rs  painter.rs
src/style/: animation.rs  border.rs  border_path.rs  color.rs  css_manager.rs  flex.rs  font.rs  length.rs  node_item.rs  overflow.rs  select.rs  style_vars.rs  styles.rs  transform.rs  var_expr.rs
src/text/: textbox.rs
src/text/textbox/: line.rs  util.rs
src/window/: page.rs  popup.rs
tests/: demo.css
web/: debug.html  index.html
