[package]
name = "skia-window"
version = "0.5.0"
edition = "2021"
description = "Rendering window with skia"
license = "MIT"


[features]
default = []

desktop = []

egl = ["gl", "glutin/egl"]
glx = ["gl", "glutin/glx", "glutin/x11", "winit/x11", "x11"]
wgl = ["gl", "glutin/wgl"]
x11 = ["winit/x11", "skia-safe/x11"]
wayland = ["winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita-notitle", "skia-safe/wayland"]
gl = ["dep:gl", "glutin", "skia-safe/gl", "egl", "wgl"]


[dependencies]
log = "0.4"
winit = { package = "deft-winit", version = "0.31.1", features = ["android-native-activity", "rwh_06"] }
glutin = { version = "0.32.3", optional = true }
measure_time = "0.8.3"
raw-window-handle = "0.6.0"
skia-safe = { package = "deft-skia-safe", features = ["binary-cache", "svg", "gl"], default-features = false, version = "0.83.0" }
gl = { version = "0.14.0", optional = true }
# sparkle = { version = "0.1.25" }

[target.'cfg(not(target_os = "android"))'.dependencies]
softbuffer = "0.4.6"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"

[build-dependencies]
cfg_aliases = "0.1.1"


# Note:
# Since android-activity is responsible for invoking the `android_main`
# entrypoint for a native Rust application there can only be a single
# implementation of the crate linked with the application.
#
# To avoid conflicts it's generally recommend to rely on Winit to pull
# in a compatible version of android-activity but if you'd like to build
# this example against the local checkout of android-activity you should
# specify a patch here to make sure you also affect the version that Winit
# uses.
#
# Note: also check that the local android-activity/Cargo.toml version matches
# the version of android-activity that Winit depends on (in case you need to check
# out a release branch locally to be compatible)
#android-activity = { path = "../../android-activity" }
#
#[lib]
##name="main"
#name = "skia_window"
#path = "src/lib.rs"
#crate_type=["cdylib", "lib"]

#required-features = [ "desktop" ]

# For Android test
#[[example]]
#name = "demo"
#crate_type=["cdylib", "lib"]
